scrollbar on entrymenu fixed (scroll-up button is visible now)

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,4 +1,9 @@
 
+
+#menu_container .v-navigation-drawer__content {
+  overflow-y: hidden;
+}
+
 html {
   overscroll-behavior: contain;
 }
